# cutegames

./: .gitignore  CMakeLists.txt  NOTICE  README.md  ugi.md
libs/: elo.hpp  libevents.hpp  sprt.hpp  threadpool.hpp  utils.hpp
res/: settings.json
src/: colour.hpp  cutegames.hpp  main.cpp  match.hpp  openings.cpp  openings.hpp  pgn.cpp  pgn.hpp  play.cpp  play.hpp  print.hpp  settings.cpp  settings.hpp  store.hpp
src/engine/: engine.cpp  engine.hpp  engine_process.cpp  engine_process.hpp  engine_uai.cpp  engine_uai.hpp  engine_uci.cpp  engine_uci.hpp  engine_ugi.cpp  engine_ugi.hpp
src/events/: events.hpp  on_engine_loaded.cpp  on_engine_unloaded.cpp  on_events.hpp  on_game_finished.cpp  on_game_started.cpp  on_match_finished.cpp
src/games/: ataxx.hpp  chess.hpp  game.hpp  ugigame.hpp
src/match/: openings.cpp  openings.hpp  pgn.cpp  pgn.hpp  play.cpp  play.hpp  settings.cpp  settings.hpp  statistics.hpp
src/tournament/: gauntlet.hpp  generator.hpp  roundrobin.hpp  types.hpp
tests/: elo.cpp  events.cpp  sprt.cpp  store.cpp
tests/games/: ataxx.cpp  generic.cpp
tests/tournament/: gauntlet.cpp  roundrobin.cpp
